fix: use dynamic DNS resolution in nginx to prevent 502 after container restarts

--- a/nginx/nginx.ip.conf
+++ b/nginx/nginx.ip.conf
@@ -32,26 +32,18 @@ http {
     gzip_comp_level 5;
     gzip_types text/plain text/css text/xml application/json application/javascript application/rss+xml application/atom+xml image/svg+xml;
 
-    # Upstream servers
-    upstream api {
-        server api:3001;
-        keepalive 8;
-    }
-
-    upstream client {
-        server client:3000;
-        keepalive 4;
-    }
-
-    upstream driver {
-        server driver:3000;
-        keepalive 4;
-    }
+    # Docker DNS resolver for dynamic upstream resolution
+    resolver 127.0.0.11 valid=10s ipv6=off;
 
     # Main server - Client app on port 80
     server {
         listen 80;
         server_name _;
+
+        # Define upstreams dynamically to allow DNS re-resolution
+        set $api_upstream api:3001;
+        set $client_upstream client:3000;
+        set $driver_upstream driver:3000;
 
         # Health check endpoint
         location /health {
@@ -61,7 +53,7 @@ http {
 
         # API proxy
         location /api/ {
-            proxy_pass http://api;
+            proxy_pass http://$api_upstream;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -71,7 +63,7 @@ http {
 
         # WebSocket support for Socket.IO
         location /socket.io/ {
-            proxy_pass http://api;
+            proxy_pass http://$api_upstream;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
@@ -84,7 +76,7 @@ http {
 
         # Client app (default)
         location / {
-            proxy_pass http://client;
+            proxy_pass http://$client_upstream;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
@@ -101,9 +93,13 @@ http {
         listen 8080;
         server_name _;
 
+        # Define upstreams dynamically for driver server
+        set $api_upstream api:3001;
+        set $driver_upstream driver:3000;
+
         # API proxy for driver app (must be before /)
         location /api/ {
-            proxy_pass http://api;
+            proxy_pass http://$api_upstream;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -113,7 +109,7 @@ http {
 
         # WebSocket (must be before /)
         location /socket.io/ {
-            proxy_pass http://api;
+            proxy_pass http://$api_upstream;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
@@ -125,7 +121,7 @@ http {
 
         # Driver app (default - must be last)
         location / {
-            proxy_pass http://driver;
+            proxy_pass http://$driver_upstream;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
